# med-vehicle-intelligence

./: .gitignore  LICENSE  Procfile  README.md  pyproject.toml  railway.toml  smithery.yaml
knowledge_base/: shop_questions.json  vehicle_issues.json
src/med_vehicle_intelligence/: config.py  server.py
src/med_vehicle_intelligence/knowledge/: loader.py
src/med_vehicle_intelligence/knowledge_base/: maintenance_schedules.json  red_flags.json  repair_costs.json
src/med_vehicle_intelligence/tools/: check_estimate.py  maintenance.py  red_flags.py  repair_replace.py
tests/: test_check_estimate.py  test_maintenance.py  test_red_flags.py  test_repair_replace.py
