[project]
name = "med-vehicle-intelligence"
version = "1.0.0"
description = "Expert car repair and maintenance advisory MCP tools from a 20-year mechanic veteran"
requires-python = ">=3.11"
dependencies = ["mcp>=1.0.0"]

[project.scripts]
med-vehicle-intelligence = "med_vehicle_intelligence.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/med_vehicle_intelligence"]

[tool.pytest.ini_options]
testpaths = ["tests"]
